other-vpol/limit-hostpath-vols/.kyverno-test/badpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pods-all
spec:
  initContainers:
  - name: inittest-webserver
    image: asdfeasdfasada:latest
    # volumeMounts:
    # - mountPath: /some/dir
    #   name: bar
    #   readOnly: true
  containers:
  - name: test-webserver
    image: asdfeasdfasada:latest
    volumeMounts:
    - mountPath: /some/dir
      name: foo
      readOnly: true
  - name: test-webserver02
    image: sjbonmqopcta:latest
    # volumeMounts:
    # - mountPath: /some/dir
    #   name: bar
    #   readOnly: true
  volumes:
  - name: foo
    hostPath:
      path: /etc
  # - name: bar
  #   hostPath:
  #     path: /data/junk
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
