other-vpol/limit-hostpath-vols/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-hostpath-vols
policies:
- ../limit-hostpath-vols.yaml
resources:
- goodpod.yaml
- badpod.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: limit-hostpath-vols
  resources:
  - bad-pods-all
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: limit-hostpath-vols
  resources:
  - good-pods-all
  result: pass
variables: values.yaml
