other-vpol/limit-hostpath-vols/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: limit-hostpath-vols
  resources:
  - name: bad-pods-all
    values:
      request.operation: UPDATE
